--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -16,11 +16,13 @@ cabal-version:        >=1.10
 executable lil-render
   main-is:            Main.hs
   other-modules:      Image
+                    , Image.Color
                     , Image.TGA
   build-depends:      base         >= 4.7     && < 5
                     , binary       >= 0.7.5   && < 0.8
                     , bytestring   >= 0.10.6  && < 0.11
-                    , array        >= 0.5.1.1 && < 0.6
+                    , array        >= 0.5.1   && < 0.6
+                    , lens         >= 4.13    && < 4.14
   default-extensions:   DeriveGeneric
                       , OverloadedStrings
                       , FlexibleInstances
@@ -28,6 +30,13 @@ executable lil-render
                       , StandaloneDeriving
                       , DeriveFunctor
                       , BinaryLiterals
+                      , TemplateHaskell
+                      , TypeFamilies
+                      , TypeOperators
+                      , FlexibleContexts
+                      , DataKinds
+                      , KindSignatures
+                      , ScopedTypeVariables
 
   hs-source-dirs:     src
   default-language:   Haskell2010
