--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -16,6 +16,7 @@ cabal-version:        >=1.10
 executable lil-render
   main-is:            Main.hs
   other-modules:      Image
+                    , Image.Mutable
                     , Image.Color
                     , Image.TGA
   build-depends:      base         >= 4.7     && < 5
