--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -22,7 +22,7 @@ executable lil-render
   build-depends:      base         >= 4.7     && < 5
                     , binary       >= 0.7.5   && < 0.8
                     , bytestring   >= 0.10.6  && < 0.11
-                    , array        >= 0.5.1   && < 0.6
+                    , vector       >= 0.11.0  && < 0.12
                     , lens         >= 4.13    && < 4.14
   default-extensions:   DeriveGeneric
                       , OverloadedStrings
@@ -38,6 +38,7 @@ executable lil-render
                       , DataKinds
                       , KindSignatures
                       , ScopedTypeVariables
+                      , RankNTypes
 
   hs-source-dirs:     src
   default-language:   Haskell2010
