--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -17,7 +17,9 @@ executable lil-render
   main-is:            Main.hs
   other-modules:      Image
                     , Image.Mutable
+                    , Image.Drawing.Primitives
                     , Image.Color
+                    , Image.NamedColors
                     , Image.TGA
   build-depends:      base         >= 4.7     && < 5
                     , binary       >= 0.7.5   && < 0.8
