--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -24,6 +24,7 @@ executable lil-render
                     , Model
                     , Model.Wavefront
                     , Math.Vector
+                    , Renderer.Wireframe
   build-depends:      base         >= 4.7     && < 5
                     , binary       >= 0.7.5   && < 0.8
                     , bytestring   >= 0.10.6  && < 0.11
