--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -24,7 +24,7 @@ executable lil-render
                     , Model
                     , Model.Wavefront
                     , Math.Vector
-                    , Renderer.Wireframe
+                    , Renderer
   build-depends:      base         >= 4.7     && < 5
                     , binary       >= 0.7.5   && < 0.8
                     , bytestring   >= 0.10.6  && < 0.11
@@ -34,12 +34,14 @@ executable lil-render
                     , reflection   >= 2.1     && < 2.2
                     , attoparsec   >= 0.13.0  && < 0.14
                     , text         >= 1.2.2   && < 1.3
+                    , MonadRandom  >= 0.4.2.3 && < 0.5
   default-extensions:   DeriveGeneric
                       , OverloadedStrings
                       , FlexibleInstances
                       , GADTs
                       , StandaloneDeriving
                       , DeriveFunctor
+                      , DeriveFoldable
                       , BinaryLiterals
                       , TemplateHaskell
                       , TypeFamilies
