--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -53,6 +53,7 @@ executable lil-render
                       , RankNTypes
                       , MultiParamTypeClasses
                       , OverloadedStrings
+  ghc-options: -funfolding-use-threshold=16 -O2
 
   hs-source-dirs:     src
   default-language:   Haskell2010
