--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -24,17 +24,19 @@ executable lil-render
                     , Model
                     , Model.Wavefront
                     , Math.Vector
+                    , Math.Matrix
+                    , Math.Matrix.Transform
                     , Renderer
-  build-depends:      base         >= 4.7     && < 5
-                    , binary       >= 0.7.5   && < 0.8
-                    , bytestring   >= 0.10.6  && < 0.11
-                    , vector       >= 0.11.0  && < 0.12
-                    , lens         >= 4.13    && < 4.14
-                    , primitive    >= 0.6.1   && < 0.7
-                    , reflection   >= 2.1     && < 2.2
-                    , attoparsec   >= 0.13.0  && < 0.14
-                    , text         >= 1.2.2   && < 1.3
-                    , MonadRandom  >= 0.4.2.3 && < 0.5
+  build-depends:      base             >= 4.7     && < 5
+                    , binary           >= 0.7.5   && < 0.8
+                    , bytestring       >= 0.10.6  && < 0.11
+                    , vector           >= 0.11.0  && < 0.12
+                    , lens             >= 4.13    && < 4.14
+                    , primitive        >= 0.6.1   && < 0.7
+                    , reflection       >= 2.1     && < 2.2
+                    , attoparsec       >= 0.13.0  && < 0.14
+                    , text             >= 1.2.2   && < 1.3
+                    , MonadRandom      >= 0.4.2.3 && < 0.5
   default-extensions:   DeriveGeneric
                       , OverloadedStrings
                       , FlexibleInstances
