--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -39,6 +39,7 @@ library
                       , vector           >= 0.11.0  && < 0.12
                       , primitive        >= 0.6.1   && < 0.7
                       , deepseq          >= 1.4.1   && < 1.5
+                      , criterion        >= 1.1.1   && < 1.2
                       , attoparsec       >= 0.13.0  && < 0.14
                       , text             >= 1.2.2   && < 1.3
                       , store            >= 0.2.0.0 && < 0.3
@@ -101,19 +102,47 @@ benchmark lil-render-bench
     type:             exitcode-stdio-1.0
     main-is:          Bench.hs
 
-    build-depends:    base       >= 4.7   && < 5
-                    , lil-render >= 0.1.0 && < 0.2
-                    , criterion  >= 1.1   && < 1.2
-                    , QuickCheck >= 2.8   && < 2.9
+    build-depends:      base             >= 4.7     && < 5
+                      , bytestring       >= 0.10.6  && < 0.11
+                      , vector           >= 0.11.0  && < 0.12
+                      , primitive        >= 0.6.1   && < 0.7
+                      , deepseq          >= 1.4.1   && < 1.5
+                      , criterion        >= 1.1.1   && < 1.2                      
+                      , attoparsec       >= 0.13.0  && < 0.14
+                      , text             >= 1.2.2   && < 1.3
+                      , store            >= 0.2.0.0 && < 0.3
+                      , th-utilities     >= 0.1.0   && < 0.2
+                      , vector-th-unbox  >= 0.2.1.6 && < 0.3
+                      , template-haskell >= 2.10.0  && < 2.11
 
-    default-extensions:  BangPatterns
-                       , TemplateHaskell
-                       , OverloadedStrings
-                       , TypeFamilies
-                       , GADTs
-                       , UnicodeSyntax
+    default-extensions: DeriveGeneric
+                      , OverloadedStrings
+                      , FlexibleInstances
+                      , GADTs
+                      , StandaloneDeriving
+                      , GeneralizedNewtypeDeriving
+                      , DeriveFunctor
+                      , DeriveFoldable
+                      , BinaryLiterals
+                      , TemplateHaskell
+                      , TypeFamilies
+                      , TypeOperators
+                      , FlexibleContexts
+                      , DataKinds
+                      , KindSignatures
+                      , ScopedTypeVariables
+                      , RankNTypes
+                      , MultiParamTypeClasses
+                      , OverloadedStrings
+                      , ViewPatterns
+                      , BangPatterns
+                      , UnicodeSyntax
 
     ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -main-is Bench.main
 
-    hs-source-dirs:   bin
+    hs-source-dirs:   bin, src
+    c-sources:  src/LilRender/Math/Geometry.c
+    cc-options: -Wall -O3 -march=core2
+    extra-libraries: m
+
     default-language: Haskell2010
