--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -107,13 +107,14 @@ benchmark lil-render-bench
                       , vector           >= 0.11.0  && < 0.12
                       , primitive        >= 0.6.1   && < 0.7
                       , deepseq          >= 1.4.1   && < 1.5
-                      , criterion        >= 1.1.1   && < 1.2                      
+                      , criterion        >= 1.1.1   && < 1.2
                       , attoparsec       >= 0.13.0  && < 0.14
                       , text             >= 1.2.2   && < 1.3
                       , store            >= 0.2.0.0 && < 0.3
                       , th-utilities     >= 0.1.0   && < 0.2
                       , vector-th-unbox  >= 0.2.1.6 && < 0.3
                       , template-haskell >= 2.10.0  && < 2.11
+                      , QuickCheck       >= 2.8.2   && < 2.9
 
     default-extensions: DeriveGeneric
                       , OverloadedStrings
