--- a/stack.yaml
+++ b/stack.yaml
@@ -12,6 +12,7 @@ extra-deps:
 - store-0.2.0.0
 - store-core-0.2.0.0
 - th-utilities-0.1.1.0
+- yarr-image-io-1.3.2.1
 
 # Override default flag values for local packages and extra-deps
 flags: {}
