--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -45,7 +45,7 @@ library
                       , store            >= 0.2.0.0 && < 0.3
                       , th-utilities     >= 0.1.0   && < 0.2
                       , vector-th-unbox  >= 0.2.1.6 && < 0.3
-                      , template-haskell >= 2.10.0  && < 2.11
+                      , template-haskell >= 2.10.0  && < 2.12
                       , QuickCheck       >= 2.8.2   && < 2.9
 
     default-extensions: DeriveGeneric
@@ -70,11 +70,11 @@ library
                       , ViewPatterns
                       , BangPatterns
                       , UnicodeSyntax
-    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports
+    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -rtsopts -g
 
     hs-source-dirs:     src
-    c-sources:  src/LilRender/Math/Geometry.c
-    cc-options: -Wall -O3 -march=core2
+    c-sources:  src/LilRender/Image/DrawingPrimitives.c
+    cc-options: -Wall -O3
     extra-libraries: m
 
     default-language:   Haskell2010
@@ -94,7 +94,7 @@ executable lil-render
                        , GADTs
                        , UnicodeSyntax
 
-    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports
+    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -rtsopts -g
 
     hs-source-dirs:     bin
     default-language:   Haskell2010
@@ -140,11 +140,11 @@ benchmark lil-render-bench
                       , BangPatterns
                       , UnicodeSyntax
 
-    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -main-is Bench.main
+    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -main-is Bench.main -rtsopts -g
 
     hs-source-dirs:   bin, src
-    c-sources:  src/LilRender/Math/Geometry.c
-    cc-options: -Wall -O3 -march=core2
+    c-sources:  src/LilRender/Image/DrawingPrimitives.c
+    cc-options: -Wall -O3
     extra-libraries: m
 
     default-language: Haskell2010
