--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -51,7 +51,6 @@ library
                       , vector-th-unbox  >= 0.2.1.6 && < 0.3
                       , template-haskell >= 2.10.0  && < 2.12
                       , QuickCheck       >= 2.8.2   && < 2.9
-                      , repa             >= 3.4     && < 3.5
                       , JuicyPixels      >= 3.2.7   && < 3.3
 
     default-extensions: DeriveGeneric
@@ -77,11 +76,10 @@ library
                       , BangPatterns
                       , UnicodeSyntax
                       , CPP
-    ghc-options: -O2 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -Odph -rtsopts -threaded -fno-liberate-case -fexpose-all-unfoldings -funfolding-keeness-factor1000 -fsimpl-tick-factor=500 -fllvm -pgmlo opt-3.5 -pgmlc llc-3.5 -optlo-O3
-
+    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -rtsopts -g
     hs-source-dirs:     src
     c-sources:  src/LilRender/Image/DrawingPrimitives.c
-    cc-options: -Wall -O3
+    cc-options: -Wall -O3 -g
     extra-libraries: m
 
     default-language:   Haskell2010
@@ -126,7 +124,6 @@ benchmark lil-render-bench
                       , vector-th-unbox  >= 0.2.1   && < 0.3
                       , template-haskell >= 2.10.0  && < 2.11
                       , QuickCheck       >= 2.8.2   && < 2.9
-                      , repa             >= 3.4     && < 3.5
                       , JuicyPixels      >= 3.2.7   && < 3.3
 
     default-extensions: DeriveGeneric
@@ -155,7 +152,7 @@ benchmark lil-render-bench
     ghc-options: -main-is Bench -O2 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -Odph -rtsopts -threaded -fno-liberate-case -fexpose-all-unfoldings -funfolding-use-threshold16 -funfolding-keeness-factor1000 -fsimpl-tick-factor=500 -fllvm -pgmlo opt-3.5 -pgmlc llc-3.5 -optlo-O3
     hs-source-dirs:   bin, src
     c-sources:  src/LilRender/Image/DrawingPrimitives.c
-    cc-options: -Wall -O3
+    cc-options: -Wall -O3 -g
     extra-libraries: m
 
     default-language: Haskell2010
