--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -77,11 +77,11 @@ library
                       , UnicodeSyntax
                       , CPP
 
-    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -rtsopts -g
+    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs
 
     hs-source-dirs:     src
     c-sources:  src/LilRender/Image/DrawingPrimitives.c
-    cc-options: -Wall -O3 -g
+    cc-options: -Wall -O3
     extra-libraries: m
 
     default-language:   Haskell2010
@@ -104,7 +104,7 @@ executable lil-render
                        , GADTs
                        , UnicodeSyntax
 
-    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -rtsopts -g
+    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -rtsopts
 
     hs-source-dirs:     bin
     default-language:   Haskell2010
@@ -152,11 +152,11 @@ benchmark lil-render-bench
                       , UnicodeSyntax
                       , CPP
 
-    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -main-is Bench.main -rtsopts -g
+    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -main-is Bench.main -rtsopts
 
     hs-source-dirs:   bin, src
     c-sources:  src/LilRender/Image/DrawingPrimitives.c
-    cc-options: -Wall -O3 -g
+    cc-options: -Wall -O3
     extra-libraries: m
 
     default-language: Haskell2010
