--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -31,9 +31,9 @@ library
                       , LilRender.Shader.Library
 
     other-modules:      LilRender.Image.DrawingPrimitives
-                      , LilRender.Image.Format.TGA
                       , LilRender.Image.Mutable
                       , LilRender.Image.Immutable
+                      , LilRender.Image.STB
                       , LilRender.Model.Internal
                       , LilRender.Model.Wavefront
 
@@ -80,8 +80,9 @@ library
     ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs
 
     hs-source-dirs:     src
-    c-sources:  src/LilRender/Image/DrawingPrimitives.c
-    cc-options: -Wall -O3
+    c-sources:  src/LilRender/Image/DrawingPrimitives.c src/LilRender/Image/stb_image.c
+    cc-options: -Wall -O3 -msse2
+    include-dirs: deps
     extra-libraries: m
 
     default-language:   Haskell2010
@@ -124,7 +125,7 @@ benchmark lil-render-bench
                       , store            >= 0.2.0   && < 0.3
                       , th-utilities     >= 0.1.0   && < 0.2
                       , vector-th-unbox  >= 0.2.1   && < 0.3
-                      , template-haskell >= 2.10.0  && < 2.11
+                      , template-haskell >= 2.10.0  && < 2.12
                       , QuickCheck       >= 2.8.2   && < 2.9
                       , JuicyPixels      >= 3.2.7   && < 3.3
 
@@ -155,8 +156,9 @@ benchmark lil-render-bench
     ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -main-is Bench.main -rtsopts
 
     hs-source-dirs:   bin, src
-    c-sources:  src/LilRender/Image/DrawingPrimitives.c
-    cc-options: -Wall -O3
+    c-sources:  src/LilRender/Image/DrawingPrimitives.c src/LilRender/Image/stb_image.c
+    cc-options: -Wall -O3 -msse2
+    include-dirs: deps
     extra-libraries: m
 
     default-language: Haskell2010
