--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -34,6 +34,7 @@ library
                       , LilRender.Image.Mutable
                       , LilRender.Image.Immutable
                       , LilRender.Image.STB
+                      , LilRender.Image.Format.TGA
                       , LilRender.Model.Internal
                       , LilRender.Model.Wavefront
 
@@ -77,11 +78,11 @@ library
                       , UnicodeSyntax
                       , CPP
 
-    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs
+    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -g
 
     hs-source-dirs:     src
     c-sources:  src/LilRender/Image/DrawingPrimitives.c src/LilRender/Image/stb_image.c
-    cc-options: -Wall -O3 -msse2
+    cc-options: -Wall -O3 -msse2 -g
     include-dirs: deps
     extra-libraries: m
 
@@ -105,7 +106,7 @@ executable lil-render
                        , GADTs
                        , UnicodeSyntax
 
-    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -rtsopts
+    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -rtsopts -g
 
     hs-source-dirs:     bin
     default-language:   Haskell2010
