--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -33,7 +33,7 @@ library
     other-modules:      LilRender.Image.DrawingPrimitives
                       , LilRender.Image.Mutable
                       , LilRender.Image.Immutable
-                      , LilRender.Image.STB  
+                      , LilRender.Image.STB
                       , LilRender.Model.Internal
                       , LilRender.Model.Wavefront
 
@@ -46,12 +46,8 @@ library
                       , criterion        >= 1.1.1   && < 1.2
                       , attoparsec       >= 0.13.0  && < 0.14
                       , text             >= 1.2.2   && < 1.3
-                      , store            >= 0.2.0.0 && < 0.3
-                      , th-utilities     >= 0.1.0   && < 0.2
-                      , vector-th-unbox  >= 0.2.1.6 && < 0.3
                       , template-haskell >= 2.10.0  && < 2.12
                       , QuickCheck       >= 2.8.2   && < 2.9
-                      , JuicyPixels      >= 3.2.7   && < 3.3
 
     default-extensions: DeriveGeneric
                       , OverloadedStrings
@@ -80,7 +76,7 @@ library
     ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -g
 
     hs-source-dirs:     src
-    c-sources:  src/LilRender/Image/DrawingPrimitives.c src/LilRender/Image/stb_image.c
+    c-sources:  src/LilRender/Color/scale.c src/LilRender/Image/DrawingPrimitives.c src/LilRender/Image/stb_image.c
     cc-options: -Wall -O3 -msse2 -g
     include-dirs: deps
     extra-libraries: m
@@ -122,12 +118,8 @@ benchmark lil-render-bench
                       , criterion        >= 1.1.1   && < 1.2
                       , attoparsec       >= 0.13.0  && < 0.14
                       , text             >= 1.2.2   && < 1.3
-                      , store            >= 0.2.0   && < 0.3
-                      , th-utilities     >= 0.1.0   && < 0.2
-                      , vector-th-unbox  >= 0.2.1   && < 0.3
                       , template-haskell >= 2.10.0  && < 2.12
                       , QuickCheck       >= 2.8.2   && < 2.9
-                      , JuicyPixels      >= 3.2.7   && < 3.3
 
     default-extensions: DeriveGeneric
                       , OverloadedStrings
@@ -156,7 +148,7 @@ benchmark lil-render-bench
     ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -main-is Bench.main -rtsopts
 
     hs-source-dirs:   bin, src
-    c-sources:  src/LilRender/Image/DrawingPrimitives.c src/LilRender/Image/stb_image.c
+    c-sources:  src/LilRender/Color/scale.c src/LilRender/Image/DrawingPrimitives.c src/LilRender/Image/stb_image.c
     cc-options: -Wall -O3 -msse2
     include-dirs: deps
     extra-libraries: m
