--- a/lil-render.cabal
+++ b/lil-render.cabal
@@ -12,18 +12,11 @@ category:
 build-type:           Simple
 cabal-version:        >=1.10
 
-flag debug
-  description: Enable debug logging
-  default:     False
-
 library
     exposed-modules:    LilRender.Color
                       , LilRender.Color.Named
                       , LilRender.Image
                       , LilRender.Math.Geometry
-                      , LilRender.Math.Matrix
-                      , LilRender.Math.Transform
-                      , LilRender.Math.Vector
                       , LilRender.Model
                       , LilRender.Texture
                       , LilRender.Renderer
@@ -41,15 +34,12 @@ library
                       , bytestring       >= 0.10.6  && < 0.11
                       , vector           >= 0.11.0  && < 0.12
                       , primitive        >= 0.6.1   && < 0.7
-                      , deepseq          >= 1.4.1   && < 1.5
                       , criterion        >= 1.1.1   && < 1.2
                       , attoparsec       >= 0.13.0  && < 0.14
                       , text             >= 1.2.2   && < 1.3
-                      , vector-th-unbox  >= 0.2.1.6 && < 0.3
-                      , store            >= 0.2.0.0 && < 0.3
-                      , th-utilities     >= 0.1.0   && < 0.3
                       , QuickCheck       >= 2.8.2   && < 2.9
                       , stb-image-redux  >= 0.2.0.0 && < 0.3
+                      , linear          >= 1.20.5  && < 1.21
 
     default-extensions: DeriveGeneric
                       , OverloadedStrings
@@ -79,13 +69,9 @@ library
     hs-source-dirs:     src
     c-sources:  src/LilRender/Image/DrawingPrimitives.c
     cc-options: -Wall -mavx -mavx2 -mfma -O3 -ffp-contract=fast -ffast-math
-    include-dirs: deps
     extra-libraries: m
 
     default-language:   Haskell2010
-
-    if flag(debug)
-        cpp-options:  -DDEBUG
 
 executable lil-render
     main-is:          Main.hs
@@ -93,7 +79,7 @@ executable lil-render
     build-depends:      base       >= 4.7     && < 5
                       , lil-render >= 0.1.0   && < 0.2
                       , criterion  >= 1.1.1   && < 1.2
-                      , deepseq    >= 1.4.1   && < 1.5
+                      , linear     >= 1.20.5  && < 1.21
 
     default-extensions:  BangPatterns
                        , TemplateHaskell
@@ -115,14 +101,11 @@ benchmark lil-render-bench
                       , bytestring       >= 0.10.6  && < 0.11
                       , vector           >= 0.11.0  && < 0.12
                       , primitive        >= 0.6.1   && < 0.7
-                      , deepseq          >= 1.4.1   && < 1.5
                       , criterion        >= 1.1.1   && < 1.2
                       , attoparsec       >= 0.13.0  && < 0.14
                       , text             >= 1.2.2   && < 1.3
-                      , store            >= 0.2.0.0 && < 0.3
-                      , th-utilities     >= 0.1.0   && < 0.3
-                      , vector-th-unbox  >= 0.2.1.6 && < 0.3
                       , QuickCheck       >= 2.8.2   && < 2.9
+                      , stb-image-redux  >= 0.2.0.0 && < 0.3
 
     default-extensions: DeriveGeneric
                       , OverloadedStrings
@@ -152,7 +135,6 @@ benchmark lil-render-bench
     hs-source-dirs:   bin, src
     c-sources:  src/LilRender/Image/DrawingPrimitives.c
     cc-options: -Wall -mcpu=tune -O3 -ffp-contract=fast -ffast-math
-    include-dirs: deps
     extra-libraries: m
 
     default-language: Haskell2010
